--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,24 @@
 <h1>Application logs</h1>
+
+<%= form_tag root_path, method: :get do %>
+  <%= label_tag :http_method %>
+  <%= text_field_tag :http_method, @query_params[:http_method] %>
+  <%= label_tag :request_id %>
+  <%= text_field_tag :request_id, @query_params[:request_id] %>
+  <%= label_tag :status %>
+  <%= text_field_tag :status, @query_params[:status] %>
+  <%= label_tag :host %>
+  <%= text_field_tag :host, @query_params[:host] %>
+  <%= label_tag :path %>
+  <%= text_field_tag :path, @query_params[:path] %>
+  <%= label_tag :fwd %>
+  <%= text_field_tag :fwd, @query_params[:fwd] %>
+
+  <%= submit_tag %>
+<% end %>
+
 <ul style="list-style: none; padding: 0">
   <% @logs.each do |log| %>
     <li class="log" style="margin-bottom: 10px"><%= log %></li>
   <% end %>
-/ul>
+</ul>
