--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.pages {
+  &.index {
+    margin: 0 20px;
+
+    ul {
+      list-style: none;
+
+      li {
+        font-size: 14px;
+
+        &.list-group-item {
+          margin: 15px 0;
+          background-color: #eee;
+        }
+      }
+    }
+  }
+}
