Fix root page title

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Application logs</h1>
+<h1>Magic Logger</h1>
 
 <%= form_tag root_path, method: :get, id: 'filters' do %>
   <%= label_tag :http_method, 'HTTP method' %>
