--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -20,9 +20,29 @@
 <hr>
 
 <div class="panel panel-default">
-  <ul class="list-group striped">
-    <% @logs.each do |log| %>
-      <li class="<%= 'list-group-item' if log.request_id.present? %> log"><%= log %></li>
-    <% end %>
-  </ul>
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+      <th>timestamp</th>
+      <th>http_method</th>
+      <th>host</th>
+      <th>path</th>
+      <th>status</th>
+      <th>fwd</th>
+      <th>request_id</th>
+    </thead>
+
+    <tbody>
+      <% @logs.each do |log| %>
+        <tr class="log">
+          <td><%= log.timestamp %></td>
+          <td><%= log.http_method %></td>
+          <td><%= log.host %></td>
+          <td><%= log.path %></td>
+          <td><%= log.status %></td>
+          <td><%= log.fwd %></td>
+          <td><%= log.request_id %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
