Improve logs visiblity

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -36,24 +36,30 @@
       width: 100% ;
       table-layout: fixed;
 
+      tbody tr:nth-child(even) {
+        background-color: #ebebeb;
+      }
+
       tr {
         display: table-row;
       }
 
       td {
-        // word-wrap: break-word;
-        // white-space: pre-wrap;
+        padding: 0.35em 0.75em;
         overflow-wrap: break-word;
         font-family: monospace;
         font-size: 14px;
       }
 
       tr.request-log td {
-        border-left: 1px solid #333;
-        border-right: 1px solid #333;
+        border-left: 1px solid #ddd;
+        border-right: 1px solid #ddd;
         vertical-align:middle;
+        background-color: white;
+      }
+
+      td.timestamp, td.status, td.http_method {
         text-align: center;
-        font-weight: 600;
       }
 
       th.timestamp, td.timestamp {
@@ -61,19 +67,15 @@
       }
 
       th.path, td.path {
-        width: 45%;
-      }
-
-      td.fwd, th.fwd {
-        width: 9%;
+        width: 55%;
       }
 
       td.host, th.host {
-        width: 15%;
+        width: 20%;
       }
 
       td.status, th.status {
-        width: 4%;
+        width: 5%;
       }
 
       td.http_method, th.http_method {
