Fix pagination for new open field query

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -45,5 +45,5 @@
 </div>
 
 <% if @logs.size == @per_page %>
-  <a class="btn btn-block btn-primary" href='/?per_page=<%= @per_page + Kaminari.config.default_per_page %>&before_log=<%= @logs.first.id %><%= "&utf8=✓&http_method=#{@query_params[:http_method]}&request_id=#{@query_params[:request_id]}&status=#{@query_params[:status]}&host=#{@query_params[:host]}&path=#{@query_params[:path]}&fwd=#{@query_params[:fwd]}&commit=Filter" %>#<%= @logs.last.id %>'>more...</a>
+  <a class="btn btn-block btn-primary" href='/?per_page=<%= @per_page + Kaminari.config.default_per_page %>&before_log=<%= @logs.first.id %><%= "&utf8=✓&query=#{@query}&commit=Filter" %>#<%= @logs.last.id %>'>more...</a>
 <% end %>
