--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -24,6 +24,11 @@
       .btn {
         margin: 0 0 3px 0;
       }
+
+      #from, #to {
+        width: 160px;
+        display: inline;
+      }
     }
 
     a.btn {
